references/sysmlv2/SysML-v2-Pilot-Implementation/org.omg.sysml.xpect.tests/src/org/omg/sysml/xpect/tests/validation/invalid/ConstraintUsage_Invalid.sysml.xt
version https://git-lfs.github.com/spec/v1
oid sha256:dca397cc757c7decfc67190bf6c9f5708671cfedb29f0f2d7473acb9e29bd88c
size 2025
